# text2gpt-rust

./: CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  text2gpt1.py
.github/workflows/: buildable.yml
src/: CLAUDE.md  config.rs  lib.rs  main.rs
src/data/: CLAUDE.md  dataset.rs  generator.rs  mod.rs  refiner.rs
src/inference/: CLAUDE.md  generator.rs  mod.rs
src/io/: CLAUDE.md  json.rs  mod.rs  safetensors.rs
src/model/: CLAUDE.md  attention.rs  block.rs  gpt.rs  mod.rs
src/tokenizer/: CLAUDE.md  gpt2.rs  mod.rs
src/training/: CLAUDE.md  mod.rs  trainer.rs
src/utils/: CLAUDE.md  folder_naming.rs  mod.rs  ollama.rs
